# Lumina-Research

./: .dockerignore  .gitignore  PRD.md  README.md  dump.rdb  n8n-scraper.json  tasks.json  tx.yml
.github/workflows/: deploy-cloudrun.yml
apps/website/: AGENTS.md  PRD.md  components.json  deep-research-report.md  next.config.ts  package-lock.json  package.json  proxy.ts
docs/: API_SERVICE_GUIDE.md  ORCHESTRATOR_SERVICE_GUIDE.md  PYTHON_BACKEND_GUIDE.md  WORKER_SERVICE_GUIDE.md
docs/specifications/: 01_ARCHITECTURE_AND_CORE_PRINCIPLES.md  02_DATABASE_SCHEMA_AND_MODELS.md  03_FASTAPI_GATEWAY_SERVICE.md  04_WORKER_INGESTION_PIPELINE.md  05_LANGGRAPH_ORCHESTRATOR.md  06_NEXTJS_FRONTEND_INTEGRATION.md
infra/: README.md
infra/docker/: Dockerfile.api.cloudrun  api.Dockerfile  docker-compose.prod.yml  docker-compose.yml  orchestrator.Dockerfile  web.Dockerfile  worker.Dockerfile
infra/env/: .env.cloudrun.example  .env.example  services.env.example  website.env.example
scripts/: dev.sh  seed.sh  test_backend_flow.sh  test_simple_flow.sh
services/: IMPLEMENTATION_GUIDE.md  README.md
services/api/: .env.example  README.md  main.py  pyproject.toml
services/orchestrator/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
services/orchestrator/orchestrator/core/: celery_app.py  config.py  database.py  errors.py
services/orchestrator/orchestrator/graph/: build.py  nodes.py  state.py
services/orchestrator/orchestrator/services/: checkpointer.py  deep_research.py  llm.py  retriever.py  secrets.py
services/orchestrator/orchestrator/tasks/: runs.py  test_error.py
services/orchestrator/tests/: conftest.py  test_graph_contract.py  test_langgraph_dry_run.py  test_supabase_integration.py
services/worker/: .env.example  main.py  pyproject.toml
services/worker/app/: __init__.py
services/worker/app/core/: __init__.py  celery_app.py  config.py  database.py
services/worker/app/tasks/: __init__.py  ingestion.py
services/worker/app/utils/: embeddings.py  secrets.py  storage.py  text.py
services/worker/tests/: test_live_ingestion_contract.py  test_worker_contract.py
supabase/: config.toml  schema.sql
supabase/migrations/: 20240407000000_initial_schema.sql  20260512000000_match_chunks_rpc.sql  20260516000000_add_ai_settings.sql  20260521000000_add_run_config.sql  20260525000000_add_n8n_source_type.sql  20260527000000_add_rls_policies.sql  (+6 more)
supabase/seed/: seed.sql  (+1 more)
(+175 files in other folders)
