[project]
name = "orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.0",
    "cryptography>=46.0.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "deepagents>=0.6.3",
    "langchain>=1.3.0",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=0.3.2",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-postgres>=3.0.1",
    "langsmith>=0.8.3",
    "psycopg[binary]>=3.1.18",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "redis>=5.3.1",
    "supabase>=2.24.0",
    "uvicorn>=0.43.0",
]
