[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "celery>=5.6.0",
    "cryptography>=46.0.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "langchain-google-genai>=4.2.2",
    "langsmith>=0.8.3",
    "lxml>=6.0.2",
    "pdfminer-six>=20260107",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "redis>=5.3.1",
    "supabase>=2.24.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.43.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
